--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ html {
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+main {
+  max-width: 1400px;
+  margin-inline: auto;
 }
 
 img {
@@ -45,6 +50,7 @@ h3 {
   color: #000000;
   /* padding-bottom: var(--space-sm); */
 }
+
 p {
   font-family: "Inter", sans;
   color: rgb(0, 0, 0);
@@ -53,24 +59,22 @@ p {
   padding-bottom: var(--space-sm);
   max-width: 42ch; /* Begrænser bredden til max 42 tegn på hver linje */
 }
-
 /* General styles */
 body {
   margin: 0;
   font-family: Arial, sans-serif;
 }
-
 .menu-bar {
-  position: fixed;
+  position: fixed; /* Keeps the menu fixed at the top */
   top: 0;
   left: 0;
   width: 100%;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.2) 0%, /* Start with white, 20% opacity */ rgba(255, 255, 255, 0.2) 25%, /* Stay white at 25% */ rgba(219, 219, 219, 0.2) 41%, /* Transition to light gray at 41% */ rgba(196, 196, 196, 0.2) 59%, /* Move to mid-gray at 59% */ rgba(172, 172, 172, 0.2) 74%, /* Transition to darker gray at 74% */ rgba(160, 160, 160, 0.2) 86%, /* Darker gray at 86% */ rgba(153, 153, 153, 0.2) 100% /* End with the darkest gray */);
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 10px 20px;
-  z-index: 1000;
+  z-index: 1000; /* Ensures the menu is on top of other elements */
 }
 
 .logo {
@@ -105,7 +109,7 @@ body {
 }
 
 .menu ul li a:hover {
-  color: #007bff;
+  color: var(--tertiary);
 }
 
 /* Burger menu styles */
@@ -154,4 +158,62 @@ body {
     text-align: right;
     margin: 5px 0;
   }
+}
+
+/* ----------------------- */
+
+.green_background {
+  background-color: var(--primary);
+}
+.pink_background {
+  background-color: var(--secondary);
+}
+
+@media (max-width: 800px) {
+  /* -----------Front page mobile------------ */
+  .grid_4 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (min-width: 800px) {
+  /* -----------Front page desktop------------ */
+  .grid_3 {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    gap: var(--space-md);
+  }
+}
+.grid_4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: var(--space-sm);
+}
+
+/* -----------Web desktop------------ */
+
+.footer_flex {
+  display: flex;
+  width: ;
+  justify-content: space-between;
+  img {
+    width: 20%;
+    gap: ;
+    background-color: var(--primary);
+  }
+}
+.button {
+  font-family: "inria sans", sans;
+  color: var(--quarternary);
+  padding: var(var(--space-md));
+  background-color: ;
+  border-color: ;
+  border-radius: ;
+  border-radius: 73px;
+  border: 4px solid #fff;
+  background: #a64e5e;
+  width: 230px;
+  height: 58px;
+  flex-shrink: 0;
 }
